--- a/login.html
+++ b/login.html
@@ -5,11 +5,61 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>大事件-登录/注册</title>
+    <!-- 导入LayUI的样式 -->
+    <link rel="stylesheet" href="/assets/lib/layui/css/layui.css" />
+    <!-- 导入自己的样式 -->
+    <link rel="stylesheet" href="/assets/css/login.css" />
 </head>
 
 <body>
+    <!-- 头部的logo区 -->
+    <div class="layui-main">
+        <img src="/assets/images/logo.png" alt="" />
+    </div>
+    <!-- 登录注册区 -->
+    <div class="loginAndRegBox">
+        <div class="title-box"></div>
+        <!-- 登录的div -->
+        <div class="login-box">
+            <!-- 登陆的表单 -->
+            <form class="layui-form" action="">
+                <!-- 用户名 -->
+                <div class="layui-form-item">
+                    <!-- 这个是去layuiweb里面粘贴图标的代码 -->
+                    <i class="layui-icon layui-icon-username"></i>
+                    <input type="text" name="username" required lay-verify="required" placeholder="请输入用户名" autocomplete="off" class="layui-input" />
+                </div>
+                <!-- 密码 -->
+                <div class="layui-form-item">
+                    <!-- 这个是去layuiweb里面粘贴图标的代码 -->
+                    <i class="layui-icon layui-icon-password"></i>
+                    <input type="password" name="password" required lay-verify="required" placeholder="请输入密码" autocomplete="off" class="layui-input" />
+                </div>
+                <!-- 按钮 -->
+                <div class="layui-form-item">
+                    <!-- 这些都是从layuiweb里面截取的 -->
+                    <!-- 注意：表单提交按钮和普通按钮的区别，就是lay-submit属性 -->
+                    <button class="layui-btn layui-btn-fluid layui-btn-normal" lay-submit>登录</button>
+                </div>
+                <div class="layui-form-item links">
+                    <!-- 这里使用id选择器是因为要写js代码了，因为要实现两个盒子的相互切换 -->
+                    <a href="javaScript:;" id="link_reg">去注册账号</a>
+                </div>
+            </form>
 
+
+        </div>
+        <!-- 注册的div -->
+        <div class="reg-box">
+            <a href="javaScript:;" id="link_login">去登陆</a>
+        </div>
+    </div>
+
+    <!-- 导入JQuery -->
+    <script src="/assets/lib/jquery.js"></script>
+    <!-- 导入自己的JS脚本 -->
+    <script src="/assets/js/login.js"></script>
 </body>
 
 </html>
