--- a/login.html
+++ b/login.html
@@ -34,7 +34,7 @@
                 <div class="layui-form-item">
                     <!-- 这个是去layuiweb里面粘贴图标的代码 -->
                     <i class="layui-icon layui-icon-password"></i>
-                    <input type="password" name="password" required lay-verify="required" placeholder="请输入密码" autocomplete="off" class="layui-input" />
+                    <input type="password" name="password" required lay-verify="required|pwd" placeholder="请输入密码" autocomplete="off" class="layui-input" />
                 </div>
                 <!-- 按钮 -->
                 <div class="layui-form-item">
@@ -47,15 +47,45 @@
                     <a href="javaScript:;" id="link_reg">去注册账号</a>
                 </div>
             </form>
-
-
         </div>
         <!-- 注册的div -->
         <div class="reg-box">
-            <a href="javaScript:;" id="link_login">去登陆</a>
+            <!-- 注册的表单 -->
+            <form class="layui-form" id="form_reg">
+                <!-- 用户名 -->
+                <div class="layui-form-item">
+                    <!-- 这个是去layuiweb里面粘贴图标的代码 -->
+                    <i class="layui-icon layui-icon-username"></i>
+                    <input type="text" name="username" required lay-verify="required" placeholder="请输入用户名" autocomplete="off" class="layui-input" />
+                </div>
+                <!-- 密码 -->
+                <div class="layui-form-item">
+                    <!-- 这个是去layuiweb里面粘贴图标的代码 -->
+                    <i class="layui-icon layui-icon-password"></i>
+                    <input type="password" name="password" required lay-verify="required|pwd" placeholder="请输入密码" autocomplete="off" class="layui-input" />
+                </div>
+                <!-- 密码确认 -->
+                <div class="layui-form-item">
+                    <!-- 这个是去layuiweb里面粘贴图标的代码 -->
+                    <i class="layui-icon layui-icon-password"></i>
+                    <input type="password" name="repassword" required lay-verify="required|pwd|repwd" placeholder="再次确认密码" autocomplete="off" class="layui-input" />
+                </div>
+                <!-- 按钮 -->
+                <div class="layui-form-item">
+                    <!-- 这些都是从layuiweb里面截取的 -->
+                    <!-- 注意：表单提交按钮和普通按钮的区别，就是lay-submit属性 -->
+                    <button class="layui-btn layui-btn-fluid layui-btn-normal" lay-submit>注册</button>
+                </div>
+                <div class="layui-form-item links">
+                    <!-- 这里使用id选择器是因为要写js代码了，因为要实现两个盒子的相互切换 -->
+                    <a href="javaScript:;" id="link_login">去登陆</a>
+                </div>
+            </form>
+
         </div>
     </div>
-
+    <!-- 导入Layui的js文件 -->
+    <script src="/assets/lib/layui/layui.all.js"></script>
     <!-- 导入JQuery -->
     <script src="/assets/lib/jquery.js"></script>
     <!-- 导入自己的JS脚本 -->
