--- a/login.html
+++ b/login.html
@@ -23,7 +23,7 @@
         <!-- 登录的div -->
         <div class="login-box">
             <!-- 登陆的表单 -->
-            <form class="layui-form" action="">
+            <form class="layui-form" id="form_login">
                 <!-- 用户名 -->
                 <div class="layui-form-item">
                     <!-- 这个是去layuiweb里面粘贴图标的代码 -->
