完成了登陆和注册功能的开发

--- a/login.html
+++ b/login.html
@@ -88,6 +88,8 @@
     <script src="/assets/lib/layui/layui.all.js"></script>
     <!-- 导入JQuery -->
     <script src="/assets/lib/jquery.js"></script>
+    <!-- 导入自己定义的baseAPI.js,要放在JQ之后，自己的JS脚本之前 -->
+    <script src="/assets/js/baseAPI.js"></script>
     <!-- 导入自己的JS脚本 -->
     <script src="/assets/js/login.js"></script>
 </body>
